# kubeview

./: Cargo.toml  LICENSE  README.md  homebrew-formula-template.rb
.github/workflows/: ci.yml  release.yml
Formula/: kubeview.rb
src/: app.rs  k8s.rs  main.rs  theme.rs  ui.rs
